fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,12 @@
 
 body {
   height: 100vh;
-  overflow-y: hidden;
 }
 
 /* The side navigation menu */
 .sidenav {
   height: 100%;
-  width: 100%;
+  width: 50%;
   position: fixed;
   z-index: 1;
   top: 0;
