--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,11 @@
 /*
   Mobile
 */
+@media (min-width: 300px) and (max-width: 576px) {
+  .sidenav {
+    width: 100% !important;
+  }
+}
 
 @media (min-width: 300px) and (max-width: 768px) {
   section {
